feat: add cashkick microservice

--- a/backend/cashkick-service/src/main/resources/application.yml
+++ b/backend/cashkick-service/src/main/resources/application.yml
@@ -5,3 +5,16 @@ spring:
   application:
     name: CASHKICK-SERVICE
 
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
