--- a/backend/cashkick-service/pom.xml
+++ b/backend/cashkick-service/pom.xml
@@ -16,11 +16,22 @@
 	<description>cashkick-service</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.8</spring-cloud.version>
 
 			<sonar.organization>jinankhan</sonar.organization>
 			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+		<sonar.exclusions>
+			**/dto/**,
+			**/entity/**,
+			**/exception/**,
+			**/utils/**,
+			**/config/**,
+			**/utils/**,
+			**/service/**,
+			**/CashkickServiceApplication.java
+		</sonar.exclusions>
 		</properties>
 
 	<dependencies>
@@ -31,6 +42,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -50,28 +66,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>2.0.27</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-elasticsearch</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.json.bind</groupId>
-			<artifactId>jakarta.json.bind-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.json</groupId>
-			<artifactId>jakarta.json-api</artifactId>
-			<version>2.0.1</version>
 		</dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
