feat : add payment microservice

--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -31,9 +31,9 @@ spring:
           filters:
             - AuthenticationFilter
         - id: PAYMENT-SERVICE
-          uri: lb://CONTRACTS-SERVICE
+          uri: lb://PAYMENT-SERVICE
           predicates:
-            - Path=/api/v1/contracts/**
+            - Path=/api/v1/payments/**
           filters:
             - AuthenticationFilter
 
