--- a/backend/payment-service/pom.xml
+++ b/backend/payment-service/pom.xml
@@ -19,6 +19,16 @@
 
 			<sonar.organization>jinankhan</sonar.organization>
 			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+				<sonar.exclusions>
+			**/dto/**,
+			**/entity/**,
+			**/exception/**,
+			**/utils/**,
+			**/config/**,
+			**/utils/**,
+			**/PaymentServiceApplication.java
+		</sonar.exclusions>
+
 	</properties>
 
 	<dependencies>
